--- a/src/branding/ctlos/stylesheet.qss
+++ b/src/branding/ctlos/stylesheet.qss
@@ -43,6 +43,6 @@ The IDs are based on the object names in the C++ code.
 }
 */
 
-#Slideshow, #SlideshowPictures {
+#viewManagerStack {
   background: #161720;
 }
